[gd_scene load_steps=2 format=3 uid="uid://dkmprcd1wgt7x"]

[ext_resource type="Script" path="res://interface/menus/main/character_creation/character_creation.gd" id="1_mmg7e"]

[node name="CharacterCreationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mmg7e")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Labels" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
text = "What is your name? "

[node name="GenderLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
text = "What is your gender? "

[node name="RaceLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
text = "What is your race? "

[node name="ClassLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
text = "What is your class? "

[node name="AgeLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
text = "What is your age?"

[node name="AppearanceLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
text = "What do you look like?"

[node name="Inputs" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer/Inputs"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="GenderOption" type="OptionButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Inputs"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Male"
popup/item_0/id = 0
popup/item_1/text = "Female"
popup/item_1/id = 1

[node name="RaceOption" type="OptionButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Inputs"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 9
selected = 0
popup/item_0/text = "Human"
popup/item_0/id = 0
popup/item_1/text = "Elf"
popup/item_1/id = 1
popup/item_2/text = "Dwarf"
popup/item_2/id = 2
popup/item_3/text = "Halfling"
popup/item_3/id = 3
popup/item_4/text = "Gnome"
popup/item_4/id = 4
popup/item_5/text = "Dragonborn"
popup/item_5/id = 5
popup/item_6/text = "HalfElf"
popup/item_6/id = 6
popup/item_7/text = "HalfOrc"
popup/item_7/id = 7
popup/item_8/text = "Tiefling"
popup/item_8/id = 8

[node name="ClassOption" type="OptionButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Inputs"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 12
selected = 0
popup/item_0/text = "Barbarian"
popup/item_0/id = 0
popup/item_1/text = "Bard"
popup/item_1/id = 1
popup/item_2/text = "Cleric"
popup/item_2/id = 2
popup/item_3/text = "Druid"
popup/item_3/id = 3
popup/item_4/text = "Fighter"
popup/item_4/id = 4
popup/item_5/text = "Monk"
popup/item_5/id = 5
popup/item_6/text = "Paladin"
popup/item_6/id = 6
popup/item_7/text = "Ranger"
popup/item_7/id = 7
popup/item_8/text = "Rogue"
popup/item_8/id = 8
popup/item_9/text = "Sorcerer"
popup/item_9/id = 9
popup/item_10/text = "Warlock"
popup/item_10/id = 10
popup/item_11/text = "Wizard"
popup/item_11/id = 11

[node name="AgeSpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer/HBoxContainer/Inputs"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AppearanceInput" type="TextEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer/Inputs"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="GenerateButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Generate"

[node name="SaveButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Start"

[node name="AvatarFrame" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
